# benchify-client

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
benchify/: __init__.py  main.py  source_manipulation.py
src/benchify/: empty.py  empty2.py  main.py  source_manipulation.py
tests/: test_source_manipulation.py
tests/fixtures/: demo1.py  demo2.py  demo3.py  demo4.py
