[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchify"
version = "0.0.11"
authors = [
  { name="Max von Hippel", email="max@benchify.ai" },
  { name="Juan Castaño", email="juan@benchify.ai" },
  { name="Tyler Gabb", email="tylerjgabb@gmail.com" },
  { name="Ammar Husain", email="ammar.s.husain@gmail.com" },
]
description = "Formal code intelligence"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "auth0-python",
    "appdirs",
    "pyjwt>=2.8.0",
    "requests",
    "rich",
    "typer",
    "urllib3==1.26.6"
]

[project.scripts]
benchify = "benchify.main:analyze"

[project.urls]
Homepage = "https://github.com/Benchify/benchify-api"
Issues = "https://github.com/Benchify/benchify-api/issues"